[gd_scene load_steps=12 format=3 uid="uid://nexo8k0ub5ty"]

[ext_resource type="Script" path="res://src/ui/components/discover/discover_carrousel_item.gd" id="1_50l6s"]
[ext_resource type="Theme" uid="uid://bm1rvmngc833v" path="res://assets/themes/theme.tres" id="1_wda0j"]
[ext_resource type="Texture2D" uid="uid://ddueoxukk4cfu" path="res://assets/ui/Img.png" id="2_yft25"]
[ext_resource type="Texture2D" uid="uid://dra4ek5p0o6jj" path="res://assets/ui/wearable_categories/body_shape-icon.svg" id="4_m37km"]
[ext_resource type="Theme" uid="uid://chwr8vock83p4" path="res://assets/themes/dark_dcl_theme/dark_dcl_theme.tres" id="5_dvu5w"]
[ext_resource type="FontFile" uid="uid://hqi2efd5kd17" path="res://assets/themes/fonts/inter/Inter-Bold.ttf" id="6_bhjcv"]
[ext_resource type="Texture2D" uid="uid://dp2sc2kkjq5wk" path="res://assets/ui/wearable_categories/eyes-icon.svg" id="7_xw8tq"]
[ext_resource type="Texture2D" uid="uid://csqvfrfl3wkf" path="res://assets/ui/wearable_categories/hands_wear-icon.svg" id="8_md4wo"]
[ext_resource type="FontFile" uid="uid://di6yadh02vrla" path="res://assets/themes/fonts/inter/Inter-Regular.ttf" id="9_2oigk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_368si"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0877"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.858824, 0.858824, 0.858824, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="DiscoverCarrouselItem" type="Control"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 3
anchors_preset = 0
offset_right = 250.0
offset_bottom = 250.0
script = ExtResource("1_50l6s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="DiscoverCarrouselItem" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect_Background" type="TextureRect" parent="MarginContainer/DiscoverCarrouselItem"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_wda0j")
texture = ExtResource("2_yft25")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_368si")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("4_m37km")
expand_mode = 1
stretch_mode = 5

[node name="Label_Online" type="Label" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_dvu5w")
theme_override_fonts/font = ExtResource("6_bhjcv")
text = "11"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("7_xw8tq")
expand_mode = 1
stretch_mode = 5

[node name="Label_Views" type="Label" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_dvu5w")
theme_override_fonts/font = ExtResource("6_bhjcv")
text = "546"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("8_md4wo")
expand_mode = 1
stretch_mode = 5

[node name="Label_Liked" type="Label" parent="MarginContainer/DiscoverCarrouselItem/TextureRect_Background/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_dvu5w")
theme_override_fonts/font = ExtResource("6_bhjcv")
text = "78%"
horizontal_alignment = 2

[node name="Panel" type="ColorRect" parent="MarginContainer/DiscoverCarrouselItem"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
color = Color(0.858824, 0.858824, 0.858824, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/DiscoverCarrouselItem/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/DiscoverCarrouselItem/Panel/MarginContainer"]
layout_mode = 2

[node name="Label_Title" type="Label" parent="MarginContainer/DiscoverCarrouselItem/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_bhjcv")
text = "Scene Title"

[node name="Label_Description" type="Label" parent="MarginContainer/DiscoverCarrouselItem/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_2oigk")
text = "Scene Description"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c0877")
metadata/_edit_lock_ = true
